1. disabled resizing of the text area 2. fixed icon size 3. fixed phone number on mobile

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -35,7 +35,7 @@
     padding-left: $placeholder-padding;
     border-radius: 16px;
     color: $theme-color;
-
+    resize: none;
     background-color: #fff;
   }
 
