--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -6,7 +6,9 @@
   height: 24px;
 
   background-position: center;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+
 
   transition: transform 0.3s;
 
@@ -55,8 +57,10 @@
     }
   }
 
-  .icon--phone:hover + .icon--phone-icon {
-    display: inline;
+  @include on-tablet{
+    .icon--phone:hover + .icon--phone-icon {
+      display: inline;
+    }
   }
 }
 
